Very close to deadline submit

--- a/report/Abstract.tex
+++ b/report/Abstract.tex
@@ -1,8 +1,8 @@
 \section*{Abstract}
 Network protocols are a set of rules that strictly define the order and content of messages passed between users over a network. Often these protocols are used to define how to establish a secure and encrypted connection. As these protocols grow in complexity, it becomes increasingly complicated to implement them. Making matters worse is ensuring that the implementation adheres to the rules of the protocol. Dealing with these issues can cause implementations to become complicated and obscure a system's properties and work-flow.
 \\\\
-In this paper we will create a domain specific language to help us manage this complexity. The DSL will provide a concise and precise syntax for defining a protocols message flow. This definition will then be used to dynamically check if an implementation is adhering to the specified message flow. 
+In this paper we will show how we created a domain specific language to help manage this complexity. The DSL will provide a concise and precise syntax for defining a protocols message flow. This definition will then be used to dynamically check if an implementation is adhering to the specified message flow. 
 
-To test the capabilities of our DSL we have defined and implemented several network protocols. We have created a secure chat server that allows multiple participants to exchange encrypted messages. We have also implemented a HTTP server capable of fulfilling received requests.
+To test the capabilities of our DSL we have defined and implemented several network protocols. We have created a secure chat server that allows multiple participants to exchange encrypted messages. In addition, we have also implemented a simple HTTP server capable of fulfilling received requests.
 
-The evaluation will primarily focus on the trade-offs that are involved when implementing our DSL. It will cover topics such as performance and the problems that it does and does not solve. We will also discuss whether an implementation of our DSL could of prevented Apple's Goto bug more formally known as ``CVE-2014-1266''.
+The evaluation will primarily focus on the trade-offs that are involved when implementing our DSL. It will cover topics such as performance and the problems that it does and does not solve. We will also discuss whether an implementation of our DSL could of prevented Apple's Goto bug, more formally known as ``CVE-2014-1266''.
