--- a/report/Conclusion.tex
+++ b/report/Conclusion.tex
@@ -1,7 +1,7 @@
 \section{Conclusion}
 In this paper we have explored the various aspects of specifying and implementing network protocols. We have discussed their importance and the difficulties revolved around creating a correct implementation. We have argued that creating a DSL for implementing protocols would be beneficial in managing this complexity.
 
-Our DSL provide a natural language for specifying protocols that help us reason about how one should create implementations. Further we can use this specification to verify that we obey the protocol during run-time. We have showed that the errors generated from the run-time checks provide us with enough information to pin-point exactly what and where something goes wrong. We have also seen that most of the benefits of our DSL relies on its correct usage. This means that developers must dedicate time to specify the message flow of the protocol and create validators for these messages. We have also stated that the Validators must be correct in order for the Protocol Monitor to function. To alleviate this problem we have ensured that testing a validator is a straightforward process.
+Our DSL provides a natural way for specifying protocols that help us reason about how one should create implementations. Further we can use this specification to verify that we obey the protocol during run-time. We have showed that the errors generated from the run-time checks provide us with enough information to pin-point exactly what and where something goes wrong. We have also seen that most of the benefits of our DSL relies on its correct usage. This means that developers must dedicate time to specify the message flow of the protocol and create validators for these messages. We have also stated that the Validators must be correct in order for the Protocol Monitor to function. To alleviate this problem we have ensured that testing a validator is a straightforward process.
 
 The usefulness of our DSL has been proven by our implementation of a chat server. This server allows multiple participants to connect and initiate a Diffie-Hellman-Merkel key exchange to establish a secure communication channel to both the server and all connecting clients. Allowing chat participants to exchange messages that only the recipient and sender can decrypt. We have also verified that the actual data being transmitted over the network is encrypted and in the order we have specified. We have also seen that the system is capable of handling a large amount users simultaneously generating requests that must be responded.
 
