--- a/report/Introduction.tex
+++ b/report/Introduction.tex
@@ -1,9 +1,11 @@
 \section{Introduction}
-In today's modern society we are surrounded by a multitude of devices that are able to communicate with other devices. These devices are usually able to both exchange and receive data. What holds true for most of these devices is that without their ability to communicate, their value would plummet. Imagine a smart-phone that could not call, text or even browse the web. 
+In today's modern society we are surrounded by a multitude of devices that are able to communicate with other devices. These devices are usually able to both exchange and receive data. What holds true for most of these devices is that without their ability to communicate, they would not exist.
 
-Devices that are able to communicate have such great value that almost everyone has access to one. It has become so widespread that it is often taken for granted. Withdrawing money from an ATM, making phone calls or checking your e-mail are all tasks that could not be performed without some form of communication. Like with all forms of communication, we need to have rules that specify how we are to exchange data. Network protocols can be considered the rules that govern the communication between devices. Protocols are created and used for a wide variety of reasons. HTTP \cite{fielding1999hypertext} is an example of such a protocol. Every time a web browser requests information from a web site, it uses the HTTP protocol to both understand how to request information and understand the response it receives.   
+Devices that are able to communicate have such great value that almost everyone has access to one. It has become so widespread that it is often taken for granted. Withdrawing money from an ATM, making phone calls or checking your e-mail are all tasks that could not be performed without some form of communication. Like with all forms of communication, we need to have rules that specify how we are to exchange data. 
+
+Network protocols can be considered the rules that govern the communication between devices. Protocols are created and used for a wide variety of reasons. Hypertext Transfer Protocol (HTTP) \cite{fielding1999hypertext} is an example of such a protocol. Every time a web browser requests information from a web site, it uses HTTP to both understand how to request information and understand the response it receives.   
 \\\\
-Often a protocol can be both complicated in its concept as it is hard in implementing. Protocols have a strictly defined control flow that specify the response to various types of messages. Protocols often define rules that these messages must obey in order for it to be a valid message. One such rule could for example be that a message sent contains a value that is a prime number. A protocol will usually have an equal amount of message types as they have rules. The resulting implementation of all of these messages and rules can make a code base difficult to understand and obfuscate the protocols control flow in the implementation.
+Often a protocol can be both complicated in its concept as it is hard in implementing. Protocols have a strictly defined control flow that specify the response to various types of messages. Protocols often define rules that these messages must obey in order for it to be a valid message. One such rule could for example be that a message sent contains a value that is a prime number. A protocol will usually have an equal amount of message types as they have rules. The resulting implementation of all of these messages and rules can make a code base difficult to understand and obfuscate the protocols control flow.
 
 In this paper we have created a domain specific language that will help us in solving this problem. This DSL provides us with a foundation for defining network protocols where the control flow is clear, precise and syntactically easy to understand. 
 
@@ -18,10 +20,10 @@ Some of the key issues involved with implementing a network protocol are
 \end{enumerate}
 
 \subsection{Why we need network protocols}
-The goal of a network protocol is to allow computers to have a standardised way of communicating with each other. This protocol gives us a shared vocabulary as it contains the definitions for the various aspects contained within the protocol. Without protocols, computers would not be able to communicate. Implementing a simple ``Hello World'' web server would be impossible. While one type of web browser may request the data as ``GET /index.html'', another might request it as ``FETCH /index.html''. The truth is, however, these request would never actually reach the web server. Without any form of protocol, we can't expect to send a request over the internet. Specifically, without the TCP/IP protocol \cite{clark1988design}, we would have no way of sending requests to the web server.
+The goal of a network protocol is to allow computers to have a standardized way of communicating with each other. This protocol gives us a shared vocabulary as it contains the definitions for the various aspects contained within the protocol. Without protocols, computers would not be able to communicate. Implementing a simple ``Hello World'' web server would be impossible. While one type of web browser may request the data as ``GET /index.html'', another might request it as ``FETCH /index.html''. The truth is, however, these request would never actually reach the web server. Without any form of protocol, we can't expect to send a request over the internet. Specifically, without the TCP/IP protocol \cite{clark1988design}, we would have no way of sending requests to the web server.
 
 \subsubsection{Cryptographic protocols}
-As stated above, using protocols allows for machines to communicate. Cryptographic protocols allows us to encrypt our communication. Using a cryptographic protocol will ensure that only the intended recipients are able to decipher our messages. This means that if someone is reading your messages, they will not be able to decipher it. This security is what allows us to authenticate ourselves online so that we have access to sensitive information.
+As stated above, using protocols allows for machines to communicate. Cryptographic protocols allows us to encrypt our communication. Using a cryptographic protocol will ensure that only the intended recipients are able to decipher our messages. This means that if someone who is not the intended recipient,  is reading your messages, they will not be able to decipher it. This security is what allows us to authenticate ourselves online so that we have access to sensitive information.
 
 \subsubsection{Protocol reuse}
 A key benefit of reusing a popular network protocol is that you are using a protocol that others have tested and implemented before. If you encounter problems you can ask for help and use a common vocabulary when doing so.
@@ -42,7 +44,7 @@ insufficient to protect against state-level actors
 \fi
 
 \subsection{Domain Specific Language}
-A domain specific language (DSL) \cite{fowler2010domain} is a computer language that solves the problem of a specific domain. DSL does often not have its own compiler, but is instead converted to a different language which does. The DSL source files are parsed into an abstract syntax tree (AST) and then outputted as a general purpose language. Languages such as Java, C++ or C\# are examples of general purpose languages. What these types of languages have in common is that they provide a foundation for solving multiple domains. DSLs are however targeted at specific domains, and can often only be used within their intended environment. Two popular examples of DSLs are Structured Query Language (SQL) and HyperText Markup Language (HTML) \cite{mernik2005and}. SQL is used for querying data from a database while HTML is used for designing a web page.
+A domain specific language (DSL) \cite{fowler2010domain} is a computer language that solves the problem of a specific domain. A DSL does often not have its own compiler, but is instead converted to a different language which does. The DSL source files are parsed into an abstract syntax tree (AST) and then outputted as a general purpose language. Languages such as Java, C++ or C\# are examples of general purpose languages. What these types of languages have in common is that they provide a foundation for solving multiple domains. DSLs are however targeted at specific domains, and can often only be used within their intended environment. Two popular examples of DSLs are Structured Query Language (SQL) and HyperText Markup Language (HTML) \cite{mernik2005and}. SQL is used for querying data from a database while HTML is used for designing a web page.
 
 \subsubsection{Benefits and Disadvantages}
 The main benefit of using a DSL is its ability to provide a written language that is equivalent to the spoken language. The DSL can then become self-documenting as it should be easy to extract the purpose of a block of code. We are also completely free to define the languages rules and grammar. We can create a language that is a 1:1 match of the spoken language used in the domain.
@@ -51,11 +53,11 @@ The disadvantage is that it takes a considerable amount of time and effort to cr
 \\\\
 %we will be able to define a protocol and specify its rules in a coherent and self-explanatory fashion. 
 \subsubsection{Embedded DSL}
-An Embedded DSL\footnote{Also referred to as internal DSL} does not have all these disadvantages nor does it have all the advantages. It is a trade-off between being able to freely create your own grammar or reaping the benefits of an existing grammar.
+An Embedded DSL\footnote{Also referred to as internal DSL} does not have all these disadvantages nor does it have all the advantages. It is a trade-off between being able to freely create your own grammar and reaping the benefits of an existing grammar.
 
-The word ``embedded'' means that we are writing our DSL inside a host language. The DSL we write is then valid syntax for the host language. This removes a lot of the disadvantages with writing a DSL, but severely limits us in our ability to freely express ourselves. This limitation is entirely dependent of the host language, some may be more limiting then others.
+The word ``embedded'' means that we are writing our DSL inside a host language. The DSL we write is then valid syntax for the host language. This removes a lot of the disadvantages with writing a DSL, but severely limits us in our ability to freely express ourselves. This limitation is entirely dependent of the host language, some may be more limiting than others.
 
-We will create an eDSL to attempt to alleviate the complexity that developers face during implementation of network protocols. Our eDSL will try to enable a work flow guided by encapsulation. It will achieve this property by decomposing the complexity of the overall protocol into smaller elements. Ideally these elements will only have a single task to perform and will abide by the following rule: one input, one output. 
+We will create an eDSL to attempt to alleviate the complexity that developers face during implementation of network protocols. Our eDSL will try to enable a work flow guided by encapsulation. It will achieve this property by decomposing the complexity of the overall protocol into smaller more manageable elements. Ideally these elements will only have a single task to perform and will abide by the following rule: one input, one output. 
 
 
 % Can I change the wording of the objective to better match my actual implementation? 
@@ -64,7 +66,7 @@ We will create an eDSL to attempt to alleviate the complexity that developers fa
 \label{sec:objectives}
 \subsubsection{Primary}
 \begin{enumerate}
-    \item Write a library that utilises the Diffie-Hellman-Merkel key exchange for encrypting data 
+    \item Write a library that utilizes the Diffie-Hellman-Merkel key exchange for encrypting data 
 over a public network.
         \begin{itemize}
             \item Initiate the establishment of a secure channel between two parties 
@@ -103,8 +105,7 @@ over a public network.
 \begin{description}
   \item[Introduction] - Provides a high level view of the description of the problem.
   \item[Background] - Useful background information the reader should know
-  \item[Architecture] - Describes a birds eye view of out initial solution
-  \item[Solution] - Information on our solution operates 
+  \item[Solution] - Information on how our solution operates 
   \item[Protocol Implementations] - Protocols implemented with our DSL
   \item[Evaluation] - Critical and objective evaluation of our work 
   \item[Conclusion] - Summarizes our paper and proposes future work.
