--- a/report/bibliographies.bib
+++ b/report/bibliographies.bib
@@ -181,12 +181,32 @@ year = {Anders}
   number =       {IC/2004/64}
 }
 
+@incollection{emir2007matching,
+  title={Matching objects with patterns},
+  author={Emir, Burak and Odersky, Martin and Williams, John},
+  booktitle={ECOOP 2007--Object-Oriented Programming},
+  pages={273--298},
+  year={2007},
+  publisher={Springer}
+}
+
 % Akka Doc == Tech report?
 @TechReport{akka-documentation,
   author =       {Typesafe},
   title =        {Akka Scala Documentation - Release 2.3.11},
   institution =  {Typesafe},
   year =         2015
+}
+
+@article{vinoski2007concurrency,
+  title={Concurrency with erlang},
+  author={Vinoski, Steve},
+  journal={Internet Computing, IEEE},
+  volume={11},
+  number={5},
+  pages={90--93},
+  year={2007},
+  publisher={IEEE}
 }
 
 % --- Defining a Protocol
